<resources>
    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
    <string name="app_name">JDP-EUMO</string>
    <string name="slogan">Nigeria Internal Security And Public Safety Alert System</string>
    <string name="home">Home</string>
    <string name="verify">Verify</string>
    <string name="bank">Bank</string>
    <string name="shop">Shop</string>
    <string name="covid">
        1. Report people who have traveled Abroad within the last 4weeks.
        2. Click to report Social gathering
        3. Click to report cas who refuse to Alert NCDC
    </string>
    <string name="more">More</string>
    <string name="slogan2">Nigeria Internal Security And Public Safety Alert System</string>
    <string name="account">Account</string>
    <string name="sign_up">Sign up</string>
    <string name="my_profile">My Profile</string>
    <string name="help">Help</string>
    <string name="how_to">How to use</string>
    <string name="agency">Partners</string>
    <string name="contact">Contact us</string>
    <string name="password">Password</string>
    <string name="next">Sign up</string>
    <string name="name">Full Name </string>
    <string name="phone">Phone Number</string>
    <string name="article">Articles</string>
    <string name="article_text">ARTICLE COMES HERE</string>
    <string name="setting">Settings</string>
    <string name="agency_text">Click on logo to access agency portals</string>
    <string name="check_more">Check more</string>
    <string name="tap">Only Tap/Press these buttons in emergency situations</string>
    <string name="emergency_1">Press power button 3 times in emergencies when you cannot talk</string>
    <string name="warning">Warning! False alarm is prosecutable offence under the law  </string>
    <string name="message">Upload comments here</string>
    <string name="interior">Ministry of Interior</string>
    <string name="error_name">Name is required</string>
    <string name="error_phone">Phone number is required</string>
    <string name="error_id">Identity Number is required</string>
    <string name="comment">Comment</string>
    <string name="upload">Upload</string>
    <string name="uploadMedia">Upload media</string>
    <string name="fire_extinguisher">Be aware of fake Fire Extinguisher, kindly verify by entering the Fire Extinguisher code below</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="error_fire">Fire extinguisher code is required</string>
    <string name="ministry">Federal Ministry of Interior</string>
    <string name="policy_agreement">By Login into this App I Agree to the TERMS and CONDITIONS. </string>
    <string name="privacy">Privacy Policy </string>
    <string name="privacy1">  SCADA built the NISPSAS app as a Free app. This SERVICE is provided by SCADA at no cost and is intended for use as is.
    This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
    If you choose to use our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that we collect is used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.
    The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at NISPSAS unless otherwise defined in this Privacy Policy.
    </string>
    <string name="privacy2">Information Collection and Use:
    For a better experience, while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to Full Name, Phone Number, Location, Images, Other Registration forms. The information that we request will be retained by us and used as described in this privacy policy.
    The app does use third party services that may collect information used to identify you.
    Link to privacy policy of third-party service providers used by the app
    •	Google Play Services
    </string>
    <string name="privacy3">Log Data:
    We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.
    </string>
    <string name="privacy4">Cookies:
    Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your devices internal memory.
    This Service does not use these "cookies" explicitly. However, the app may use third party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
    </string>
    <string name="privacy5">Service Providers:
    We may employ third-party companies and individuals due to the following reasons:
    •	To facilitate our Service;
    •	To provide the Service on our behalf;
    •	To perform Service-related services; or
    •	To assist us in analyzing how our Service is used.
    We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
    </string>
    <string name="privacy6">Security:
    We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it.
            But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.
    </string>
    <string name="privacy7">Links to Other Sites:
    This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy Policy of these websites. We have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
    </string>
    <string name="privacy8">Children’s Privacy:
    These Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.
    </string>
    <string name="privacy9">Changes to This Privacy Policy:
    We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.
    </string>
    <string name="privacy10">Contact Us:
    If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us info@NISPSAS.com.ng. Services do not address anyone under the age of 13. We do not knowingly collect personally identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information, we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.
    </string>
    <string name="transporter_verify">Avoid kidnappers, crime and robbery by taking precautions, you can verify fake drivers by entering Driver EN code or scanning the QR code</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="notice">Note: If your passport is not displaying kindly Contact your company Admin to give you the appropriate link to Update your passport.  </string>
    <string name="no_location_detected">.
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="error_transport">Transporter code is required</string>
    <string name="error_hunter">Hunter Service code is required</string>
    <string name="error_psid">PSID Service code is required</string>
    <string name="error_vigilante">Vigilante Service code is required</string>
    <string name="unknown_location">Unknown location</string>
    <string name="default_channel">Default channel</string>
    <string name="about">
Nigeria Internal Security and Public Safety Alert System (NISPSAS) is a converged mobile application platform for public safety related facilities in various Ministries, Departments and Agencies (MDAs). NISPSAS is a fulfillment of internal security and public safety mandates of Ministry of Interior(MoI) and Ministry of Communications and digital Economy  converged regulation piller of  National Digital Economy Policy and Strategy(NDEPS),  which highlights the need for a single regulatory instrument that will enable government put to effective use the splitter safety and security platform operating in silos across MDAs and operationalize  Government to Citizens (G2C) and Citizens to Government (C2G) interactive pillar of  NDEPS to create safe environment for smooth implementation of presidential order 003 and 005.
    </string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="terms">Terms and Conditions  </string>
</resources>