<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/privacyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin"
            android:text="@string/privacy"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin"
            android:text="@string/privacy1"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="@dimen/activity_margin"
            android:text="@string/privacy2"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/privacy3"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/privacy4"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/privacy5"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/privacy6"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/privacy7"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/privacy8"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/privacy9"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_margin"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:text="@string/privacy10"
            />

    </LinearLayout>

</ScrollView>